; ModuleID = '/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_resume.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ztest_opts = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [31 x i8] c"resuming from suspended state\0A\00", align 1
@SCL_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @ztest_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ztest_resume(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @spa_suspended(i32* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ztest_opts, i32 0, i32 0), align 4
  %8 = icmp sge i32 %7, 6
  br i1 %8, label %9, label %11

9:                                                ; preds = %6
  %10 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %6, %1
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @SCL_NONE, align 4
  %14 = call i32 @spa_vdev_state_enter(i32* %12, i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @vdev_clear(i32* %15, i32* null)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @spa_vdev_state_exit(i32* %17, i32* null, i32 0)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @zio_resume(i32* %19)
  ret void
}

declare dso_local i64 @spa_suspended(i32*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @spa_vdev_state_enter(i32*, i32) #1

declare dso_local i32 @vdev_clear(i32*, i32*) #1

declare dso_local i32 @spa_vdev_state_exit(i32*, i32*, i32) #1

declare dso_local i32 @zio_resume(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
